--- a/Ejercicio005/start.css
+++ b/Ejercicio005/start.css
@@ -10,22 +10,27 @@ body {
   #green {
     background-color: #8ffda7;
     flex: 0;
+    order: 3;
   }
   
   #orange {
     flex: 1;
+    order: 4;
   }
   
   #yellow {
     background-color: #ffff92;
+    order: 1;
   }
   
   #red {
     background-color: #ff919c;
+    order: 2;
   }
   
   #blue {
     background-color: #98d2ff;
+    order: 5;
   }
   
   ul {
