--- a/Ejercicio006/style.css
+++ b/Ejercicio006/style.css
@@ -1,9 +1,10 @@
 .calculator{
-    border: solid 1px black;
     width: 250px;
     height: 300px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
+    border-radius: 10%;
+    overflow: hidden;
 }
 .result{
     background-color: rgba(70, 98, 110, 0.534);
