--- a/Ejercicio008/style.css
+++ b/Ejercicio008/style.css
@@ -76,7 +76,7 @@ body{
 }
 @media (max-width: 768px) {
     .grid{
-        grid-template-columns: calc(100vw/2) calc(100vw/2);
+        grid-template-columns: 50% 50%;
         justify-content: space-between;
     }
   }
