Ejercicio resuelto cambios

--- a/Ejercicio008/style.css
+++ b/Ejercicio008/style.css
@@ -4,22 +4,19 @@
     --my-links-color: rgb(68,122,245);
 }
 body{
-    margin: 2% 2%;
     font-family: var(--my-font);  
 }
 .grid{
     width: 100%;
-    margin: 0 2%;
     display: flex;
     /*grid-template-columns: 33.3% 33.3% 33.3%;*/
     justify-items: center;
     align-items: center;
-
 }
 .article{
     padding: 0%;
-    margin: 5% 5%;
-    width: 250px;
+    margin: 2% 2%;
+    width: 33.3%;
     border-radius: 10%;
     overflow: hidden;
     background-color: rgba(117, 116, 116, 0.205);
@@ -75,17 +72,23 @@ body{
 .content{
     padding: 0% 4% 2% 4%;
 }
+
 @media (max-width: 768px) {
     .grid{
-        flex-basis: 50%;
         justify-content: space-between;
         flex-wrap: wrap;
     }
+    .article{
+        width: 45%;
+    }
   }
 
-  @media (max-width: 375px) {
+@media (max-width: 375px) {
     .grid{
         display: flex;
         flex-direction: column;
-    }
-  }
+        }
+        .article{
+            width: 90%;
+        }
+}
