--- a/Ejercicio008/style.css
+++ b/Ejercicio008/style.css
@@ -16,7 +16,8 @@ body{
 .article{
     padding: 0%;
     margin: 2% 2%;
-    width: 30%;
+    max-width: 300px;
+    min-width: 300px;
     border-radius: 10%;
     overflow: hidden;
     background-color: rgba(117, 116, 116, 0.205);
@@ -79,7 +80,8 @@ body{
         flex-wrap: wrap;
     }
     .article{
-        width: 45%;
+        max-width: 300px;
+        min-width: 300px;
     }
   }
 
@@ -89,6 +91,6 @@ body{
         flex-direction: column;
         }
         .article{
-            width: 90%;
+            width: 300px;
         }
 }
